# PAT-Advanced-Level

./: .gitignore  1012 The Best Rank (25).cpp  1012 The Best Rank(25).cpp  1062 Talent and Virtue (25).cpp  1075 PAT Judge (25).cpp  1083 List Grades (25).cpp  CMakeLists.txt  PAT.depend  PAT.layout  gmon.out
Data-Structure/: 1004 Counting Leaves.cpp  1020 Tree Traversals.cpp  1032 Sharing.cpp  1051 Pop Sequence.cpp  1052 Linked List Sorting.cpp  1053 Path of Equal Weight.cpp  1056 Mice And Rice.cpp  1074 Reversing Linked List.cpp  1079 Total Sales of Supply Chain.cpp  1094 The Largest Generation.cpp  1097 Deduplication on a Linked List.cpp  1098 Insertion of Heap sort.cpp  1106 Lowest Price in Supply Chain.cpp  CMakeLists.txt
Dichotomy/: 1010 Radix(25).cpp  1044 Shopping in Mars(25).cpp  1085 Perfect Sequence(25).cpp
Graph/: 1013 Battle over cities.cpp  1034 Head of Gang.cpp  1076 Forwards of Weibo.cpp  CMakeLists.txt
Greed/: 1033 To Fill or Not to Fill(25).cpp  1037 Magic Coupon(25).cpp  1038 Recover the Smallest Number(30).cpp  1067 Sort with Swap(25).cpp  1070 Mooncake(25).cpp
Hash/: 1041 Be Unique (20).cpp  1048 Find Coins (25).cpp  1050 String Subtraction  (20).cpp  1084 Broken Keyborad (20).cpp  1084 To Buy or Not to Buy (20).cpp
Math/: 1008 Elevator (20).cpp  1015 Reversible Primes (20).cpp  1023 Have Fun with Numbers (20).cpp  1024 Palindromic Number (25).cpp  1049 Counting Ones (30).cpp  1059 Prime Factors (25).cpp  1069 The Black Hole of Numbers(20).cpp  1078 Hashing (25).cpp  1096 Consecutive Factors (20).cpp  1104  Sum of Number Segments(20).cpp
Others/: 1093 Count PAT's(25).cpp  1101 Quick Sort(25).cpp
STL/: 1022 Digital Library (30 ).cpp  1039 Course List for Student （25).cpp  1047-Student-List-for-Course.cpp  1054 The Dominant Color (20 ).cpp  1060 Are They Equal (25).cpp  1063 Set Similarity (25).cpp  1071 Speech Patterns (25 ).cpp  1100 Mars Numbers (20 ).cpp  CMakeLists.txt
Search/: 1091 Acute Stroke.cpp  1103 Integer Factorization.cpp  CMakeLists.txt
Sort/: 1016 Phone Bills (25).cpp  1028 List Sorting(25).cpp  1080 Graduate Admission (30).cpp  1083 List Grades (25).cpp  1095 Cars on Compus (30).cpp
Tree/: 1020 Tree Traversals.cpp  1043 Is it a Binary Search tree.cpp  1064 Complete Binary Search Tree.cpp  1066 Root of AVL Tree.cpp  1086 Tree Traversals Again.cpp  1090 Highest Price in Supply Chain.cpp  1099 Build a Binary Search Tree.cpp  1102 Invert a Binary Tree.cpp  1107 Social Clusters.cpp  CMakeLists.txt
Two Pointers/: 1010 Perfect Sequence(25).cpp  1029 Median(25).cpp
Two-Pointers/: 1048-Find-Coins.cpp  1089-Insert-or-Merge.cpp  CMakeLists.txt
排序/: 1016 Phone Bills (25).cpp  1025 PAT Ranking(25).cpp  1055 The World's Richest(25).cpp
