project(Data-Structure)
set(CMAKE_CXX_STANDARD 14)

#数据结构1
add_executable(Data.stack "1051 Pop Sequence.cpp")
add_executable(Data.queue "1056 Mice And Rice.cpp")
add_executable(Data.list-reverse "1074 Reversing Linked List.cpp")
add_executable(Data.list-sharing "1032 Sharing.cpp")
add_executable(Data.list-sort "1052 Linked List Sorting.cpp")
add_executable(Data.list-depulication "1097 Deduplication on a Linked List.cpp")

#数据结构2

#并查集
#堆