add_executable(STL.a 1039-Course-List-for-Student.cpp)
add_executable(STL.b 1047-Student-List-for-Course.cpp)
add_executable(STL.c "1063 Set Similarity (25).cpp")
add_executable(STL.d "1060 Are They Equal (25).cpp")
add_executable(STL.e "1100 Mars Numbers (20 ).cpp")
add_executable(STL.f "1054 The Dominant Color (20 ).cpp")
add_executable(STL.g "1071 Speech Patterns (25 ).cpp")
add_executable(STL.h "1022 Digital Library (30 ).cpp")